...whitespace fix part 2
You know, the actual fix.

--- a/public/indivisible/style/form.css
+++ b/public/indivisible/style/form.css
@@ -57,7 +57,7 @@ div#can-form-area-call-your-senator::after {
   z-index: -1;
 }
 
-div.action_description {
+div.whitespacefix {
   white-space: pre;
   white-space: pre-line;
 }
